<resources>
    <string name="app_name">Rick and Morty Guide</string>
    <string name="character_image_description">Character\'s image</string>
    <string name="loading_failed">Either your Internet is down,
        \n there is no such character or
        \n this is the end of the list! :)</string>
    <string name="one_more_time">One more time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_label">Status:</string>
    <string name="gender_label">Gender:</string>
    <string name="name_label">Name:</string>
    <string name="species_label">Species:</string>
    <string name="created_label">Created:</string>
    <string name="something">Something</string>
    <string name="page_title">Character List</string>
    <string name="content_description_search">search for a character</string>
    <string name="search">Search</string>
    <string name="go_back_to_the_character_list">Go back to the character list</string>
</resources>